--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 
     --white: #ffffff;
 
+    --white-shadow: rgb(226, 222, 222);
+
     --green-light: #50E3A4;
     --green-pale: #c0e7bb;
     --green-dark: #46BD8A;
@@ -19,7 +21,7 @@ body {
     padding: 0 20px 40px;
     box-sizing: border-box;
     position: relative;
-    box-shadow: 10px 10px 5px rgb(226, 222, 222);
+    box-shadow: 10px 10px 5px var(--white-shadow);
 }
 .header {
     margin: 0;
