--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
     height: 60px;
     border-radius: 50%;
     font-size: 30px;
+    text-decoration: none;
 }
 .btn-new-task:hover {
     color: var(--green-dark2);
@@ -51,6 +52,9 @@ body {
 #new {
     padding: 0px;
     margin-top: 0;
+    padding-top: 3px;
+    box-sizing: border-box;
+    text-align: center;
 }
 .btn-add-task {
     position: absolute;
@@ -64,7 +68,7 @@ body {
     color: rgba(136, 136, 136, 0.534);
     cursor: pointer;
     background: none;
-  }
+}
 .btn-add-task:hover {
     color: black;
 }
@@ -129,7 +133,8 @@ body {
     display: inline-flex;
     align-items: center;
     user-select: none;
-  }
+  
+}
   .custom-checkbox+label::before {
     content: '';
     display: inline-block;
@@ -143,30 +148,50 @@ body {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 50% 50%;
-  }
+}
   .custom-checkbox:checked+label::before {
     border-color: #0b76ef;
     background-color: #0b76ef;
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
-  }
+}
   /* стили при наведении курсора на checkbox */
 .custom-checkbox:not(:disabled):not(:checked)+label:hover::before {
     border-color: #b3d7ff;
-  }
+}
   /* стили для активного состояния чекбокса (при нажатии на него) */
   .custom-checkbox:not(:disabled):active+label::before {
     background-color: #b3d7ff;
     border-color: #b3d7ff;
-  }
+}
+
   /* стили для чекбокса, находящегося в фокусе */
   .custom-checkbox:focus+label::before {
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-  }
+}
   /* стили для чекбокса, находящегося в фокусе и не находящегося в состоянии checked */
   .custom-checkbox:focus:not(:checked)+label::before {
     border-color: #80bdff;
-  }
+}
   /* стили для чекбокса, находящегося в состоянии disabled */
   .custom-checkbox:disabled+label::before {
     background-color: #e9ecef;
-  }
+}
+
+.custom-checkbox:checked + label {
+    text-decoration: line-through;
+}
+
+.exit {
+    position: absolute;
+    top: 12px;
+    right: 15px;
+    text-decoration: none;
+    font-size: 20px;
+    border: 2px solid #d4d2d2;
+    display: block;
+    width: 20px;
+    height: 20px;
+    line-height: 26px;
+    text-align: center;
+    border-radius: 5px;
+}
