--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ body {
 }
 .list-item {
     display: flex;
+    position: relative;
 }
 .label {
     flex-grow: 1;
@@ -198,4 +199,20 @@ body {
     line-height: 26px;
     text-align: center;
     border-radius: 5px;
+}
+
+.desc {
+    position: absolute;
+    bottom: -70px;
+    left: 26px;
+    background-color: #fff;
+    padding: 24px;
+    z-index: 2;
+    opacity: 0.95;
+    border: 1px solid #ccc;
+    line-height: 25px;
+    display: none;
+}
+.list-item:hover .desc {
+    display: block;
 }
