--- a/style.css
+++ b/style.css
@@ -1,15 +1,69 @@
-:root {
+.light-theme {
     --bg-1: #F0EFE9;
 
     --white: #ffffff;
 
     --white-shadow: rgb(226, 222, 222);
 
-    --green-light: #50E3A4;
-    --green-pale: #c0e7bb;
-    --green-dark: #46BD8A;
-    --green-dark2: #138d58;
+    --black: rgb(0, 0, 0);
+
+    --grey0: #cccccc;
+    --grey1: #d4d2d2;
+    --grey2: #e9ecef;
+    --grey3: #adb5bd;
+    --grey4: rgba(136, 136, 136, 0.534);
+
+    --action-light: #50E3A4;
+    --action-pale: #c0e7bb;
+    --action-dark: #46BD8A;
+    --action-dark2: #138d58;
+
+    --main0: #80bdff;
+    --main1: rgba(0, 123, 255, 0.25);
+    --main2: #b3d7ff;
+    --main3: #0b76ef;
 }
+
+.dark-theme {
+    --bg-1: #3c3b37;
+    --white: #ffffff;
+    --white-shadow: rgb(121 117 117);
+    --black: rgb(0, 0, 0);
+    --grey0: #cccccc;
+    --grey1: #d4d2d2;
+    --grey2: #e9ecef;
+    --grey3: #adb5bd;
+    --grey4: rgba(136, 136, 136, 0.534);
+    --action-light: #f3c22b;
+    --action-pale: #f9e08b;
+    --action-dark: #da9706;
+    --action-dark2: #bf8d12;
+    --main0: #49fb58;
+    --main1: rgb(116 247 194 / 25%);
+    --main2: #a4f5cc;
+    --main3: #0fc361;
+}
+
+.military-theme {
+    --bg-1: #203803;
+    --white: #b9e6bb;
+    --white-shadow: rgb(226, 222, 222);
+    --black: rgb(0 84 15);
+    --grey0: #002300;
+    --grey1: #356939;
+    --grey2: #24496f;
+    --grey3: #6c9e77;
+    --grey4: rgb(113 199 214 / 53%);
+    --action-light: #d3d5f1;
+    --action-pale: #cad4ea;
+    --action-dark: #5950ff;
+    --action-dark2: #4075de;
+    --main0: #7ac9d2;
+    --main1: rgb(40 177 64 / 25%);
+    --main2: #ec8d8d;
+    --main3: #c0ce05;
+}
+
 body {
     background-color: var(--bg-1);
     font-family: 'Baloo Tammudu 2', cursive;
@@ -31,8 +85,8 @@ body {
     position: absolute;
     bottom: -30px;
     left: calc(50% - 30px);
-    background-color: var(--green-pale);
-    color: var(--green-dark);
+    background-color: var(--action-pale);
+    color: var(--action-dark);
     border: none;
     width: 60px;
     height: 60px;
@@ -41,12 +95,12 @@ body {
     text-decoration: none;
 }
 .btn-new-task:hover {
-    color: var(--green-dark2);
+    color: var(--action-dark2);
 }
 
 #new:hover {
     border-radius: 50%;
-    background-color: var(--green-light);
+    background-color: var(--action-light);
 }
 
 #new {
@@ -65,23 +119,23 @@ body {
     border: none;
     font-size: 20px;
     font-family: 'Baloo Tammudu 2', cursive;
-    color: rgba(136, 136, 136, 0.534);
+    color: var(--grey4);
     cursor: pointer;
     background: none;
 }
 .btn-add-task:hover {
-    color: black;
+    color: var(--black);
 }
 
 #add:hover {
     border-radius: 10px;
-    border: 2px solid #ddd;
+    border: 2px solid var(--grey2);
 }
 
 #add {
     padding: 0px;
     margin-top: 0;
-    border: 2px solid #ffffff;
+    border: 2px solid var(--white);
 }
 .list {
     list-style-type: none;
@@ -118,13 +172,13 @@ body {
     border-radius: 10px;
     padding: 5px;
     width: 440px;
-    border: 2px solid #ddd;
+    border: 2px solid var(--grey2);
     outline: none;
 }
 .desc-task {
     border-radius: 10px;
     padding: 5px;
-    border: 2px solid #ddd;
+    border: 2px solid var(--grey2);
     width: 440px;
     height: 120px;
     outline: none;
@@ -147,7 +201,7 @@ body {
     height: 1em;
     flex-shrink: 0;
     flex-grow: 0;
-    border: 1px solid #adb5bd;
+    border: 1px solid var(--grey3);
     border-radius: 0.25em;
     margin-right: 0.5em;
     background-repeat: no-repeat;
@@ -155,31 +209,31 @@ body {
     background-size: 50% 50%;
 }
   .custom-checkbox:checked+label::before {
-    border-color: #0b76ef;
-    background-color: #0b76ef;
+    border-color: var(--main3);
+    background-color: var(--main3);
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
 }
   /* стили при наведении курсора на checkbox */
 .custom-checkbox:not(:disabled):not(:checked)+label:hover::before {
-    border-color: #b3d7ff;
+    border-color: var(--main2);
 }
   /* стили для активного состояния чекбокса (при нажатии на него) */
   .custom-checkbox:not(:disabled):active+label::before {
-    background-color: #b3d7ff;
-    border-color: #b3d7ff;
+    background-color: var(--main2);
+    border-color: var(--main2);
 }
 
   /* стили для чекбокса, находящегося в фокусе */
   .custom-checkbox:focus+label::before {
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-}
+    box-shadow: 0 0 0 0.2rem var(--main1)
+  }
   /* стили для чекбокса, находящегося в фокусе и не находящегося в состоянии checked */
   .custom-checkbox:focus:not(:checked)+label::before {
-    border-color: #80bdff;
+    border-color: var(--main0);
 }
   /* стили для чекбокса, находящегося в состоянии disabled */
   .custom-checkbox:disabled+label::before {
-    background-color: #e9ecef;
+    background-color: var(--grey2);
 }
 
 .custom-checkbox:checked + label {
@@ -192,7 +246,7 @@ body {
     right: 15px;
     text-decoration: none;
     font-size: 20px;
-    border: 2px solid #d4d2d2;
+    border: 2px solid var(--grey1);
     display: block;
     width: 20px;
     height: 20px;
@@ -205,15 +259,28 @@ body {
     position: absolute;
     bottom: -70px;
     left: 26px;
-    background-color: #fff;
+    background-color: var(--white);
     padding: 24px;
     z-index: 2;
     opacity: 0.95;
-    border: 1px solid #ccc;
+    border: 1px solid var(--grey0);
     line-height: 25px;
     display: none;
     width: 65%;
 }
+
 .list-item:hover .desc {
     display: block;
 }
+
+.btn-theme {
+    position: absolute;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    border: none;
+    background-color: var(--action-light);
+    right: 12px;
+    top: 12px;
+}
+
